fix: 대댓글을 달려는 댓글이 부모 댓글인지 확인하는 코드 추가, 레포지토리 대신 JPA 컬렉션 조회 활용